syntax = "proto3";

option go_package = "github.com/jordanx8/card_db";

package main;

service CardService {
    rpc GetCards(Query) returns (stream Card) {}
    rpc GetPlayers(Empty) returns (stream Player) {}
    rpc AddPlayer(PlayerRequest) returns (Response) {}
    rpc AddSeason(SeasonRequest) returns (Response) {}
    rpc AddCard(CardRequest) returns (Response) {}
}

message Empty {

}

message Query {
    string tableName = 1;
    string search = 2;
}

message Card {
    string playerName = 1;
    string season = 2;
    string manufacturer = 3;
    string set = 4;
    string insert = 5;
    string parallel = 6;
    string cardNumber = 7;
    repeated string notes = 8;
    string imageLink = 9;
}

message Player {
    string firstName = 1;
    string lastName = 2;
    string seasonsPlayed = 3;
    repeated string seasons = 4;
}

message CardRequest {
    string playerName = 1;
    string season = 2;
    string manufacturer = 3;
    string set = 4;
    string insert = 5;
    string parallel = 6;
    string cardNumber = 7;
    repeated string notes = 8;
    string imageLink = 9;
    string tableName = 10;
}

message PlayerRequest {
    string firstName = 1;
    string lastName = 2;
    string seasonsPlayed = 3;
}

message SeasonRequest {
    string season = 1;
    string firstName = 2;
    string lastName = 3;
}

message Response {
    string response = 1;
}